# LOFAR-solar-imaging

./: .gitignore  README.md  averager_test.sh  averaging.sh  calibrate_script.sh  calibration.sh  fits_plot_all.py  helioprojective_plot.py  imaging_utils.py  inspect_ms.py  pipeline.sh  pyproject.toml  reproject.py  singularity  station_outliers.py  wsclean_processing.sh
configs/: default.yaml
docs/: architecture.md
scripts/: __init__.py  fits_plot_all_cli.py  helioprojective_plot_cli.py  reproject_cli.py  run_pipeline.sh  station_outliers_cli.py
scripts/legacy/: calibration.sh  pipeline.sh  wsclean_processing.sh
src/lofar_solar_imaging/: __init__.py  pipeline.py
src/lofar_solar_imaging/imaging/: __init__.py  calibration.py
src/lofar_solar_imaging/plotting/: __init__.py  fits_overview.py  fits_plot_all.py  helioprojective.py  helioprojective_plot.py
src/lofar_solar_imaging/qc/: __init__.py  station_qc.py
src/lofar_solar_imaging/reprojection/: __init__.py  heliocentric.py
src/lofar_solar_imaging/stages/: __init__.py  averaging.py  calibration.py  common.py  imaging.py  pipeline.py
src/lofar_solar_imaging/utils/: __init__.py  config.py  inspect_ms.py
tests/: test_structure.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_calibration.py  test_config.py  test_qc.py
