[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lofar-solar-imaging"
version = "0.1.0"
description = "LOFAR solar imaging pipeline"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lofar-solar-pipeline = "lofar_solar_imaging.stages.pipeline:main"
